--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/images/splash.png",
-      "resizeMode": "native",
+      "resizeMode": "contain",
       "backgroundColor": "#06151A"
     },
     "ios": {
